- working on main view
