# budgetFlow-ui/src/app/services/models.ts
@@ -5,7 +5,6 @@
 export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { ExpenseCalendarFieldInfo } from './models/expense-calendar-field-info';
-export { ExpenseCategory } from './models/expense-category';
 export { ExpenseCategoryRequest } from './models/expense-category-request';
 export { ExpenseCategoryResponse } from './models/expense-category-response';
 export { ExpenseRequest } from './models/expense-request';
