# budgetFlow-ui/src/app/services/models/expense-category.ts
@@ -1,13 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface ExpenseCategory {
-  createdByUserId?: number;
-  hexColor?: string;
-  id?: number;
-  name?: string;
-  parentCategory?: ExpenseCategory;
-  sharedWithUsers?: Array<number>;
-  subCategories?: Array<ExpenseCategory>;
-}
