# budgetFlow-ui/src/app/services/models/expense-request.ts
@@ -2,10 +2,10 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-import { ExpenseCategory } from '../models/expense-category';
+import { ExpenseCategoryRequest } from '../models/expense-category-request';
 export interface ExpenseRequest {
   amount?: number;
-  expenseCategory?: ExpenseCategory;
+  expenseCategoryRequest?: ExpenseCategoryRequest;
   expenseDate?: string;
   id?: number;
   name?: string;
