# budgetFlow-ui/src/app/services/models/expense-response.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-import { ExpenseCategory } from '../models/expense-category';
+import { ExpenseCategoryResponse } from '../models/expense-category-response';
 export interface ExpenseResponse {
 
   /**
@@ -10,7 +10,7 @@ export interface ExpenseResponse {
    */
   amount: number;
   createdDate?: string;
-  expenseCategory?: ExpenseCategory;
+  expenseCategoryResponse?: ExpenseCategoryResponse;
   expenseDate?: string;
   id?: number;
   lastModifiedDate?: string;
