# budgetFlow-ui/src/openapi/openapi.json
@@ -589,7 +589,7 @@
         "tags": [
           "Income"
         ],
-        "operationId": "getSumOfExpensesByMonth",
+        "operationId": "getSumOfIncomesByMonth",
         "requestBody": {
           "content": {
             "application/json": {
@@ -619,7 +619,7 @@
         "tags": [
           "Expense"
         ],
-        "operationId": "getSumOfExpensesByMonth_1",
+        "operationId": "getSumOfExpensesByMonth",
         "requestBody": {
           "content": {
             "application/json": {
@@ -1136,7 +1136,52 @@
           }
         }
       },
-      "ExpenseCategory": {
+      "ExpenseCategoryRequest": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "hexColor": {
+            "type": "string"
+          },
+          "parentId": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "ExpenseRequest": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "expenseCategoryRequest": {
+            "$ref": "#/components/schemas/ExpenseCategoryRequest"
+          },
+          "amount": {
+            "type": "number",
+            "format": "double"
+          },
+          "expenseDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "note": {
+            "type": "string"
+          }
+        }
+      },
+      "ExpenseCategoryResponse": {
         "type": "object",
         "properties": {
           "id": {
@@ -1153,48 +1198,16 @@
           "hexColor": {
             "type": "string"
           },
-          "parentCategory": {
-            "$ref": "#/components/schemas/ExpenseCategory"
+          "parentId": {
+            "type": "integer",
+            "format": "int64"
           },
           "subCategories": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ExpenseCategory"
-            }
-          },
-          "sharedWithUsers": {
-            "uniqueItems": true,
             "type": "array",
             "items": {
               "type": "integer",
               "format": "int64"
             }
-          }
-        }
-      },
-      "ExpenseRequest": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          },
-          "expenseCategory": {
-            "$ref": "#/components/schemas/ExpenseCategory"
-          },
-          "amount": {
-            "type": "number",
-            "format": "double"
-          },
-          "expenseDate": {
-            "type": "string",
-            "format": "date"
-          },
-          "note": {
-            "type": "string"
           }
         }
       },
@@ -1211,8 +1224,8 @@
           "name": {
             "type": "string"
           },
-          "expenseCategory": {
-            "$ref": "#/components/schemas/ExpenseCategory"
+          "expenseCategoryResponse": {
+            "$ref": "#/components/schemas/ExpenseCategoryResponse"
           },
           "amount": {
             "type": "number",
@@ -1374,55 +1387,6 @@
           "sum": {
             "type": "number",
             "format": "double"
-          }
-        }
-      },
-      "ExpenseCategoryRequest": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          },
-          "hexColor": {
-            "type": "string"
-          },
-          "parentId": {
-            "type": "integer",
-            "format": "int64"
-          }
-        }
-      },
-      "ExpenseCategoryResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          },
-          "createdByUserId": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "hexColor": {
-            "type": "string"
-          },
-          "parentId": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "subCategories": {
-            "type": "array",
-            "items": {
-              "type": "integer",
-              "format": "int64"
-            }
           }
         }
       },
