# expenses-service/src/main/java/pl/tkaczyk/expensesservice/model/dto/ExpenseRequest.java
@@ -7,7 +7,7 @@ import java.time.LocalDate;
 public record ExpenseRequest(
         Long id,
         String name,
-        ExpenseCategory expenseCategory,
+        ExpenseCategoryRequest expenseCategoryRequest,
         double amount,
         LocalDate expenseDate,
         String note
