# expenses-service/src/main/java/pl/tkaczyk/expensesservice/model/dto/ExpenseResponse.java
@@ -12,7 +12,7 @@ import java.time.LocalDateTime;
 public record ExpenseResponse(
         Long id,
         String name,
-        ExpenseCategory expenseCategory,
+        ExpenseCategoryResponse expenseCategoryResponse,
         @Schema(description = "Kwota wydatku", required = true)
         @NotNull(message = "Kwota nie może być pusta")
         double amount,
